# dirac-simulator

./: README.md  app.py  ci_provider.py  csv_io.py  jobs.csv  models.py  policy.py  pyproject.toml  simulator.py  site_ci.csv  sites.csv
PilotBasedSim/: README.md  __init__.py  cim.conf  csv_io.py  main.py  models.py
PilotBasedSim/tests/: test_simulator.py
RealEexecution/: replay_trace_submit.py  trace.csv  trace1.csv
simplified-dirac/: README.md  __init__.py  app.py  ci_provider.py  cim.conf  csv_io.py  jobs.csv  main.py  metrics.py  models.py  policy.py  report_plots.py  simulator.py  site_ci.csv  sites.csv  trace.csv
simplified-dirac/tests/: test_additional.py  test_edge_cases.py  test_policy.py  test_simulator.py
simplified_dirac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_edge_cases.py  test_policy.py  test_simulator.py
trace/: cumulative_jobs_per_site_over_time.csv  current_jobs_per_site_over_time.csv  day.py  jobs.csv  jobs_per_site_over_time.csv  plot.py  plot2.py  sites.csv  trace.csv  trace.py  trace2.csv  trace6  waiting_over_time.csv
