[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplified-dirac"
version = "0.1.0"
description = "Simplified DIRAC simulator"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
]

[tool.setuptools]
packages = ["simplified_dirac"]

[tool.setuptools.package-dir]
simplified_dirac = "simplified-dirac"

[project.scripts]
simplified-dirac = "simplified_dirac.main:main"
